customized my app

--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
   </header>
 
   <div id="main" role="main">
-    {% block main %}{% endblock %}
+    {% block main %}My name is Dukiemar Shaw and this is my App. {% endblock %}
   </div>
 
   <footer>
