customized my app

--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,10 @@
   </header>
 
   <div id="main" role="main">
-    {% block main %}My name is Dukiemar Shaw and this is my App. {% endblock %}
+<h1>My name is Dukiemar Shaw</h1>
+<h2>I am a Computer Science major</h2>
+<p>Welcome to my app</p>
+
   </div>
 
   <footer>
